# financial-ecology

./: .gitignore  COMPLETION_REPORT.md  CONTRIBUTING.md  GITHUB_SHOWCASE.md  LICENSE  OPTIMIZATION_PHASE1_COMPLETE.md  OPTIMIZATION_PROGRESS.md  PROJECT_WEAKNESSES.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES_v1.0.0.md  SUMMARY.md  create_release.sh  github_push.sh  login_output.txt  pyproject.toml  requirements.txt  setup.sh  verify.py
.github/workflows/: test.yml
data/historical_data/: README.md
docs/: INDEX.md  STRUCTURE.md  ecosystem-model.md  faq.md  framework-principles.md  hmm-season-detector.md  multi-agent-execution.md  quick-start.md
docs/allocation-guides/: a-share-allocation-list.md
docs/case-studies/: 2008-financial-crisis.md
docs/development/: CHECKLIST.md  FINAL_SUMMARY.md  GITHUB_READY.md  PROJECT_SUMMARY.md  SUMMARY_PHASE1.md
src/: __init__.py  __main__.py
src/agents/: __init__.py  base_agent.py  executor.py  fundamental_analyst.py  portfolio_manager.py  risk_manager.py  sentiment_analyst.py  technical_analyst.py
src/ecosystem/: asset_classifier.py
src/hmm_detector/: season_hmm.py
src/visualization/: risk_visualizer.py
tests/: test_agents_simple.py  test_core.py  test_multi_agent.py
tools/: demo.py
tools/allocation-calculator/: allocation_calculator.py
tools/data/: download_data.py  generate_sample_data.py  prepare_sample_data.py  train_hmm_model.py
tools/season-questionnaire/: questionnaire.py
